--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         sys:
           - mingw32
-          - clang32
+#           - clang32
     defaults:
       run:
         shell: msys2 {0}
@@ -36,7 +36,9 @@ jobs:
           cmake:p
           ninja:p
     - name: Build it
-      run: make
+      run: |
+        cmake .
+        make
 #     - name: Copy Deps and zip
 #       run: |
 #         mkdir release
