--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,8 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: true
+    - name: pull quickjs
+      run: git clone https://github.com/bellard/quickjs.git D:/a/qjs-modules/quickjs
     - name: Setup MSYS2
       uses: msys2/setup-msys2@v2
       with:
