--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,9 @@ jobs:
           cmake:p
           ninja:p
     - name: pull quickjs
-      run: git clone https://github.com/mengmo/QuickJS-Windows-Build.git D:/a/qjs-modules/quickjs && cd D:/a/qjs-modules/quickjs && echo "#! /bin/sh" > /mingw32/bin/make && echo "\"mingw32-make\" \"\$@\"" >> /mingw32/bin/make && make LDEXPORT="-static -s" && make install
+      run: |
+        pacman -S mingw-w64-i686-gcc mingw-w64-i686-make mingw-w64-i686-dlfcn
+        git clone https://github.com/mengmo/QuickJS-Windows-Build.git D:/a/qjs-modules/quickjs && cd D:/a/qjs-modules/quickjs && echo "#! /bin/sh" > /mingw32/bin/make && echo "\"mingw32-make\" \"\$@\"" >> /mingw32/bin/make && make LDEXPORT="-static -s" && make install
     - name: Build it
       run: |
         cmake .
